feat: Add MathML and SymPy integration tests, introduce core `texpr` and caching components, and expand documentation and testing for security and gradients.

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ package-lock.json
 benchmark/wasm/
 !benchmark/wasm/wasm_benchmark.dart
 !benchmark/wasm/README.md
+/test/**/*.json
 
 # Integration test artifacts
 /test/integration/**/*.json
