--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,3 +12,6 @@ dev_dependencies:
   lints: ^6.0.0
   math_expressions: ^2.6.0 # For benchmarking comparison
   benchmark_harness: ^2.3.1
+
+dependencies:
+  web: ^1.1.1
