feat: new docs UI inspired by elysia

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@shikijs/vitepress-twoslash": "^3.21.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.6",
+    "autoprefixer": "^10.4.23",
     "markdown-it-mathjax3": "^4.0.0",
+    "postcss": "^8.5.6",
     "vitepress": "^1.6.4",
     "vitepress-plugin-llms": "^1.10.0"
   },
